<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SAN CLM</string>
    <string name="app_version">Version 1.9.9</string>
    <string name="preference_name">saneforce.sanclm.preferencefile</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_option_listeddr">DOCTOR</string>
    <string name="tab_option_chemist">CHEMIST</string>
    <string name="tab_option_stockist">STOCKIST</string>
    <string name="tab_option_unlisteddr">UNLISTED DOCTOR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
    <string name="hnt_fcs_pdts">Focused Products</string>
    <string name="sv_prsn">Save</string>
    <string name="del_prsn">Delete Presentation</string>
    <string name="prsnt">presentate</string>
    <string-array name="Det_listsview_Items">
        <item>Brand Matrix</item>
        <item>Speciality Wise</item>
        <item>All Brands</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="App_Configuration">App Configuration</string>
    <string name="Web_URL">Web URL ( eg: www.yoururl.com )</string>
    <string name="License_Key">License Key</string>
    <string name="Your_Device_ID">Your Device ID</string>
    <string name="CLEAR_DATA">CLEAR DATA</string>
    <string name="SAVE_SETTINGS">SAVE SETTINGS</string>
    <string name="CLOSE">CLOSE</string>
    <string name="language">Language</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="worktype">WORK TYPE</string>
    <string name="select_worktype">SELECT WORKTYPE</string>
    <string name="select_cluster">SELECT CLUSTER</string>
    <string name="select_headquater">SELECT HEADQUATER</string>
    <string name="headquater">HEAD QUATER</string>
    <string name="cluster">CLUSTER</string>
    <string name="remarks">REMARKS</string>
    <string name="select">SELECT</string>
    <string name="todayworktype">TODAY WORK PLAN</string>
    <string name="go">Go</string>
    <string name="todaycall">Today Calls</string>
    <string name="total">Total</string>
    <string name="calls">Calls</string>
    <string name="presentation">Presentation</string>
    <string name="report">Reports</string>
    <string name="monthly_average">Monthly Call Average</string>
    <string name="current_visit">Current Month Call Visit Details</string>
    <string name="category">Categorywise Visit Details</string>
    <string name="overall">Overall Visit Details</string>
    <string name="call">Call</string>
    <string name="coverage">Coverage</string>
    <string name="daily">Daily</string>
    <string name="average">Average</string>
    <string name="reload">Reload</string>
    <string name="detailing">Detailing</string>
    <string name="performance">Performance</string>
    <string name="time">Time</string>
    <string name="spent">Spent</string>
    <string name="brand">Brand</string>
    <string name="exposure">Exposure</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="master">MASTER LIST DOWN LOADER</string>
    <string name="list">LIST</string>
    <string name="competitors">Competitors</string>
    <string name="input">Inputs</string>
    <string name="product">Products</string>
    <string name="slides">Slides</string>
    <string name="brands">Brands</string>
    <string name="departments">Departments</string>
    <string name="speciality">Speciality</string>
    <string name="catogy">Category</string>
    <string name="qualifications">Qualification</string>
    <string name="clases">Class</string>
    <string name="types">Types</string>
    <string name="rating">Rating</string>
    <string name="details">Details</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="theraptic">Theraptic</string>
    <string name="jointwork">Jointwork</string>
    <string name="hospital">Hospital</string>
    <string name="change_cluster">Change Cluster</string>
    <string name="activity">Activity</string>
    <string name="Slides_Downloader">Slides Downloader</string>
    <string name="create_presentation">Create Presentation</string>
    <string name="tour_plan">Tour Plan</string>
    <string name="missed_date_entry">Missed Date Entry</string>
    <string name="leave_application">Leave Application</string>
    <string name="approvals">Approvals</string>
    <string name="near_me">Near Me</string>
    <string name="detailing_report">Detailing Report</string>
    <string name="logout">Logout</string>
    <string name="Dashboard">Dashboard</string>
    <string name="worktype1">Worktype</string>
    <string name="headquater1">Headquater</string>
    <string name="cluster1">Cluster</string>
    <string name="Selection">SELECTION</string>
    <string name="search">Search</string>
    <string name="listed">Listed</string>
    <string name="cancel">Cancel</string>
    <string name="presentation_name">Name your presentation</string>
    <string name="dayreport">Day Report</string>
    <string name="monthlyreport">Monthly Report</string>
    <string name="visitcontrol">Visit Control</string>
    <string name="missedreport">Missed Reports</string>
    <string name="change_password">Change Password</string>
    <string name="halfdaywork">Halfday Work</string>
    <string name="remarks1">Remarks</string>
    <string name="visit_time">Visit Time</string>
    <string name="modified_time">Modify Time</string>
    <string name="Products">Product</string>
    <string name="sampqty">Sample Qty</string>
    <string name="rxqty">Rx Qty</string>
    <string name="feedback">Feedback</string>
    <string name="input1">Input</string>
    <string name="summary">Summary</string>
    <string name="totaldoc">Total Doctor</string>
    <string name="missedcall">Missed Call</string>
    <string name="docmet">Doctor met</string>
    <string name="docseen">Doctor seen</string>
    <string name="fieldday">Field Work Days</string>
    <string name="calaverage">Call Average</string>
    <string name="savegallery">Save to Gallery</string>
    <string name="doctor">DOCTOR</string>
    <string name="met">Met</string>
    <string name="missed">Missed</string>
    <string name="previosvst">Previous Visit</string>
    <string name="apply">APPLY</string>
    <string name="clear">CLEAR</string>
    <string name="done">Done</string>
    <string name="sclt_clst">Select Cluster</string>
    <string name="sclt_work">Select Worktype</string>
    <string name="sclt_head">Select Headquater</string>
    <string name="sclt_hq">Select Hq</string>
    <string name="sclt_jw">Select Jointwork</string>
    <string name="sclt_hosp">Select Hospital</string>
    <string name="edit">Edit</string>
    <string name="session">Session</string>
    <string name="wrktype">Work Type</string>
    <string name="tgt_sales">Target Vs Sales</string>
    <string name="sclt_cat">select Category</string>
    <string name="sclt_spcl">Select Speciality</string>
    <string name="sclt_qualy">Select Qualification</string>
    <string name="sclt_class">Select Class</string>
    <string name="sclt_doc">Select Doctor</string>
    <string name="tour_entry">TOUR PLAN ENTRY</string>
    <string name="choose_date">Choose the date</string>
    <string name="send_apprve">  Send to Approval  </string>
    <string name="apprve">Approve</string>
    <string name="rejct">Reject</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="add_session">Add session</string>
    <string name="del_session">Delete session</string>
    <string name="misdate">MISSED DATE SELECTION</string>
    <string name="field">Field Work</string>
    <string name="other">Others</string>
    <string name="leavecap">LEAVE APPLICATION</string>
    <string name="lfrom">Leave From</string>
    <string name="lto">To</string>
    <string name="reason">Reason For Leave</string>
    <string name="nodays">No. of days</string>
    <string name="leavetype">Leave Type</string>
    <string name="addrs_leave">Address on Leave</string>
    <string name="eligible">Eligibility</string>
    <string name="taken">Taken</string>
    <string name="available">Available</string>
    <string name="submit">Submit</string>
    <string name="tpapproval">Tour Plan Approvals</string>
    <string name="lvapproval">Leave Approvals</string>
    <string name="dcrapproval">DCR Approvals</string>
    <string name="name">Name</string>
    <string name="ent_lvreason">Enter Leave Reason</string>
    <string name="ent_lvremarks">Enter the remarks</string>
    <string name="day">Day</string>
    <string name="accpt">Accept</string>
    <string name="frm">From</string>
    <string name="mnth">Month</string>
    <string name="year">Year</string>
    <string name="view">View</string>
    <string name="taging">Tagging</string>
    <string name="nerme">Near Me</string>
    <string name="addrss">Address</string>
    <string name="tag">TAG</string>
    <string name="refresh">Refresh</string>
    <string name="findroute">Find Route</string>
    <string name="visit">Visit</string>
    <string name="cutomer">Customer</string>
    <string name="thimnth">This Month</string>
    <string name="pr_mnth">Previous Month</string>
    <string name="custmz">Customise</string>
    <string name="nm_cust">Name Of Customer</string>
    <string name="nm_ffc">Name Of FieldForce</string>
    <string name="type">Type</string>
    <string name="territory">Territory</string>
    <string name="detail_count">Detailing count</string>
    <string name="detail_duration">Detailing Duration</string>
    <string name="detail_graph1">Top 5 Detailed Count</string>
    <string name="detail_graph2">Top 5 Detailed Time</string>
    <string name="filter">Filter</string>
    <string name="fieldforce">Field Force</string>
    <string name="selct">Select</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="conf_pass">Confirm password</string>
    <string name="sandigital">SAN Digital Detailing</string>
    <string name="alertmsg">Do you want Cancel this call without</string>
    <string name="aleretmsg1">Submit Call</string>
    <string name="savedft">Save Draft</string>
    <string name="ok">Ok</string>
    <string name="avilablecheck">Availability Check</string>
    <string name="avilablesearch">Search by Sub Category code/Description </string>
    <string name="allos">ALL OOS </string>
    <string name="allavail">ALL AVAIL </string>
    <string name="availstock">STOCK </string>
    <string name="rejectreson">Reject Reason</string>
    <string name="surerejct">Are you Sure to Reject ?</string>
    <string name="yesrject">Yes, to Reject</string>
    <string name="alert">alert</string>
    <string name="delete_present">Do you want to delete presentation?</string>
    <string name="DcrDate">DCR Date</string>
    <string name="DcrView">DCR View</string>
</resources>