<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rect_white"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rejectreson"
        android:id="@+id/txt_head"
        android:textColor="#000"
        android:textSize="14sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#DBDADA"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txt_head"
        android:id="@+id/lay_edt">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="Type here"
            android:id="@+id/edt_feed"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/lay_edt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surerejct"
            android:id="@+id/txt_warning"
            android:textColor="#000"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_mud_round_rect"
            android:padding="3dp"
            android:id="@+id/lay_cancel"
            android:layout_alignParentEnd="true"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#000"
                android:gravity="center"
                android:layout_marginRight="3dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:padding="3dp"
            android:id="@+id/lay_yes"
            android:layout_toLeftOf="@+id/lay_cancel"
            android:layout_marginRight="6dp"
            >
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/yesrject"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginRight="3dp"/>
        </RelativeLayout>


    </RelativeLayout>




</RelativeLayout>