<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/sclt_doc"
            android:padding="18dp"
            android:textSize="17sp"
            android:id="@+id/dr_head"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/dr_head"
            android:id="@+id/view_dr_head"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/CLOSE"
            android:id="@+id/dr_close"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/map_red_shape"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/done"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:id="@+id/btn_done"
            android:background="@drawable/map_blue_shape"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_dr_head"
            android:layout_above="@+id/dr_close"
            android:id="@+id/list_selection"
            android:layout_marginBottom="5dp"
            android:padding="8dp">

        </ListView>

</RelativeLayout>