<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD8D8"
    tools:context=".activities.DCRViewActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:background="#fff"
      android:id="@+id/lay_tool">
    <ImageView
        android:id="@+id/iv_dwnldmaster_back"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:background="#666666"
        android:src="@mipmap/left_arrow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DcrView"
        android:textSize="18sp"
        android:textColor="#D80808"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/iv_dwnldmaster_back"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"/>
  </RelativeLayout>
  <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/rel1"
       android:layout_below="@id/lay_tool">
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
      <TextView
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:text="@string/name"
          android:textStyle="bold"
          android:fontFamily="@font/poppins"
          android:textColor="#000"/>
      <TextView
          android:id="@+id/sfname_txt"
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/poppins_light"
          android:textColor="#000"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
      <TextView
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:text="@string/DcrDate"
          android:textStyle="bold"
          android:fontFamily="@font/poppins"
          android:textColor="#000"/>
      <TextView
          android:id="@+id/date_txt"
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/poppins_light"
          android:textColor="#000"/>

    </LinearLayout>
      <LinearLayout
          android:layout_marginBottom="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="3">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/wrktype"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/worktype_txt"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_light"
            android:textColor="#000"/>

      </LinearLayout>
    </LinearLayout>

  </RelativeLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/rel1"
      android:layout_marginBottom="60dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/dcrlistRecycle"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="2">


  <Button
      android:layout_weight="1"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/apprve"
      android:padding="5dp"
      android:layout_marginTop="3dp"
      android:layout_marginBottom="3dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="150dp"
      android:id="@+id/btn_approve"
      android:gravity="center"
      android:background="@drawable/map_blue_shape"/>

  <Button
      android:layout_weight="1"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/rejct"
      android:padding="5dp"
      android:gravity="center"
      android:layout_marginTop="3dp"
      android:layout_marginBottom="3dp"
      android:layout_marginLeft="150dp"
      android:layout_marginRight="10dp"
      android:id="@+id/btn_reject"
      android:layout_toRightOf="@+id/btn_approve"
      android:background="@drawable/map_red_shape"/>
    </LinearLayout>

  </RelativeLayout>

  </RelativeLayout>